Fixed alignment of top menu

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,3 +6,7 @@
 
 /* Customization */
 .site-nav .page-link:not(:last-child) { margin-right: 10px; }
+
+.site-nav {
+  float: left;
+}
